--- a/_output.yml
+++ b/_output.yml
@@ -1,6 +1,4 @@
 bookdown::gitbook:
-  includes:
-    in_header: google_analytics.html
   css: style.css
   config:
     toc:
@@ -9,4 +7,8 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/bit2r/book_document" target="blank">bookdown 제작</a></li>
     edit: https://github.com/bit2r/book_document/edit/main/%s
-bookdown::bs4_book: default
+bookdown::bs4_book:
+  includes:
+    in_header: google_analytics.html
+
+
